compiler/testData/diagnostics/tests/resolve/kt49736.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// WITH_STDLIB

import kotlin.collections.forEach as forEach1

fun foo() {
    <!UNRESOLVED_REFERENCE!>z<!>.a.forEach1 {  }
}